--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Clippy</title>
+    <title>Clippy3</title>
     <link rel="icon" type="image/x-icon" href="icons/death-star.png">
     <style>
         body {
