--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Clippy3</title>
+    <title>Clippy</title>
     <link rel="icon" type="image/x-icon" href="icons/death-star.png">
     <style>
         body {
@@ -180,8 +180,8 @@
               <button class="custom-button small blue" onclick="copyToClipboard(`Just wanted to follow up since we hadn't heard back from you regarding the requested information. Please respond with the requested info as soon as possible to prevent further interruption to your casting process.`, this)">No Response</button>
               <button class="custom-button small blue" onclick="copyToClipboard(`In the meantime, we've temporarily suspended your account.`, this)">Inform Suspended</button>
               <button class="custom-button small blue" onclick="copyToClipboard(`We've refunded and removed your notice. It may take 5-7 days for the refund to show up on your statement.`, this)">Refunded</button>
-              <button class="custom-button small blue" onclick="copyToClipboard(`3.`, this)">Name Difference</button>
-              <button class="custom-button small blue" onclick="copyToClipboard(`For consideration, submit a cover letter.`, this)">Cover Letter</button>
+              <button class="custom-button small blue" onclick="copyToClipboard(`Kindly also clarify the name differences between the account holder and the uploaded ID information for our records.`, this)">Name Difference</button>
+              <button class="custom-button small blue" onclick="copyToClipboard(`If you are a student please provide the name of your school, your school email address and the name of your professor for our records.`, this)">If Student</button>
               <button class="custom-button small blue" onclick="copyToClipboard(`For consideration, submit a headshot and a video reel..`, this)">HS & VR</button>
               <button class="custom-button small blue" onclick="copyToClipboard(`For consideration, submit a headshot.`, this)">Headshot</button>
               <button class="custom-button small blue" onclick="copyToClipboard(`For consideration, submit a headshot.`, this)">Headshot</button>
