--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               <button class="custom-button small blue" onclick="copyToClipboard(`We've refunded and removed your notice. It may take 5-7 days for the refund to show up on your statement.`, this)">Refunded</button>
               <button class="custom-button small blue" onclick="copyToClipboard(`Kindly also clarify the name differences between the account holder and the uploaded ID information for our records.`, this)">Name Difference</button>
               <button class="custom-button small blue" onclick="copyToClipboard(`If you are a student please provide the name of your school, your school email address and the name of your professor for our records.`, this)">If Student</button>
-              <button class="custom-button small blue" onclick="copyToClipboard(`For consideration, submit a headshot and a video reel..`, this)">HS & VR</button>
+              <button class="custom-button small blue" onclick="copyToClipboard(`Kindly forward the email you used to help direct you back to your profile so that we can attempt to replicate the issue and possibly escalate the matter if needed.`, this)">Email Not Direct</button>
               <button class="custom-button small blue" onclick="copyToClipboard(`For consideration, submit a headshot.`, this)">Headshot</button>
               <button class="custom-button small blue" onclick="copyToClipboard(`For consideration, submit a headshot.`, this)">Headshot</button>
               <button class="custom-button small blue" onclick="copyToClipboard(`For consideration, submit a headshot.`, this)">Headshot</button>
