--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         <a class="go-to-button" href="Clippy.html">Clippy</a>
         <a class="go-to-button" href="Google Search Operators.html">Go to Google Search Operators</a>
         <a class="go-to-button" href="Windows Commands.html">Go to Windows Commands</a>
+        <a class="go-to-button" href="Google Advanced Search.html">Google Advanced Search</a>
       </div>
 
       <div class="button-container">
